[package]
name = "worldview"
version = "0.1.0"
authors = ["Benjamin VanderSloot <admin@benvds.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treebitmap = "^0.4"
serde = { version = "1.0", features = ["derive"] }
itertools = "^0.8"
